Fix GitHub bug: Avoid excessive repo title wrap (#5623)

--- a/source/features/github-bugs.css
+++ b/source/features/github-bugs.css
@@ -77,3 +77,21 @@
 .pagehead-actions :is(.btn, summary) .octicon {
 	margin-right: 4px !important;
 }
+
+/* Avoid excessive repo title wrap by deprioritizing the repo header actions #5398 */
+@media (min-width: 768px) { /* Match .d-md-inline-flex */
+	:root .pagehead-actions {
+		flex-shrink: 3 !important;
+		display: inline-flex !important;
+		flex-wrap: wrap;
+		justify-content: flex-end;
+	}
+
+	:root .pagehead-actions > li {
+		margin: 0;
+	}
+
+	.pagehead-actions > li > * {
+		margin: 8px 8px 0 0;
+	}
+}
